// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getHydratedDomainObjectMetadatasFromFiles should return metadata from files w/ has lots of imports and needs hydration of nested domain objects 1`] = `
Array [
  DomainObjectMetadata {
    "decorations": Object {
      "unique": null,
      "updatable": null,
    },
    "extends": "DomainValueObject",
    "name": "Address",
    "properties": Object {
      "city": DomainObjectProperty {
        "nullable": false,
        "required": true,
        "type": "STRING",
      },
      "postal": DomainObjectProperty {
        "nullable": false,
        "required": true,
        "type": "STRING",
      },
      "state": DomainObjectProperty {
        "nullable": false,
        "required": true,
        "type": "STRING",
      },
      "street": DomainObjectProperty {
        "nullable": false,
        "required": true,
        "type": "STRING",
      },
      "suite": DomainObjectProperty {
        "nullable": true,
        "required": true,
        "type": "STRING",
      },
    },
  },
  DomainObjectMetadata {
    "decorations": Object {
      "unique": Array [
        "upc",
      ],
      "updatable": Array [
        "colors",
        "quantity",
        "description",
      ],
    },
    "extends": "DomainEntity",
    "name": "Item",
    "properties": Object {
      "colors": DomainObjectProperty {
        "nullable": false,
        "of": DomainObjectProperty {
          "nullable": false,
          "required": true,
          "type": "STRING",
        },
        "required": true,
        "type": "ARRAY",
      },
      "description": DomainObjectProperty {
        "nullable": false,
        "required": true,
        "type": "STRING",
      },
      "price": DomainObjectProperty {
        "nullable": false,
        "required": true,
        "type": "NUMBER",
      },
      "upc": DomainObjectProperty {
        "nullable": false,
        "required": true,
        "type": "STRING",
      },
    },
  },
  DomainObjectMetadata {
    "decorations": Object {
      "unique": Array [],
      "updatable": Array [],
    },
    "extends": "DomainEntity",
    "name": "Order",
    "properties": Object {
      "destination": DomainObjectProperty {
        "nullable": false,
        "of": DomainObjectMetadataReference {
          "extends": "DomainValueObject",
          "name": "Address",
        },
        "required": true,
        "type": "REFERENCE",
      },
      "id": DomainObjectProperty {
        "nullable": false,
        "required": false,
        "type": "NUMBER",
      },
      "items": DomainObjectProperty {
        "nullable": false,
        "of": DomainObjectProperty {
          "nullable": false,
          "of": DomainObjectMetadataReference {
            "extends": "DomainEntity",
            "name": "Item",
          },
          "required": true,
          "type": "REFERENCE",
        },
        "required": true,
        "type": "ARRAY",
      },
      "status": DomainObjectProperty {
        "nullable": false,
        "required": true,
        "type": "STRING",
      },
      "uuid": DomainObjectProperty {
        "nullable": false,
        "required": false,
        "type": "STRING",
      },
    },
  },
]
`;

exports[`getHydratedDomainObjectMetadatasFromFiles should return metadata from files w/ no need for hydration 1`] = `
Array [
  DomainObjectMetadata {
    "decorations": Object {
      "unique": null,
      "updatable": null,
    },
    "extends": "DomainValueObject",
    "name": "Address",
    "properties": Object {
      "city": DomainObjectProperty {
        "nullable": false,
        "required": true,
        "type": "STRING",
      },
      "postal": DomainObjectProperty {
        "nullable": false,
        "required": true,
        "type": "STRING",
      },
      "state": DomainObjectProperty {
        "nullable": false,
        "required": true,
        "type": "STRING",
      },
      "street": DomainObjectProperty {
        "nullable": false,
        "required": true,
        "type": "STRING",
      },
      "suite": DomainObjectProperty {
        "nullable": true,
        "required": true,
        "type": "STRING",
      },
    },
  },
]
`;

exports[`getHydratedDomainObjectMetadatasFromFiles should return metadata from files which needs hydration of nested enum 1`] = `
Array [
  DomainObjectMetadata {
    "decorations": Object {
      "unique": Array [
        "externalId",
      ],
      "updatable": Array [
        "status",
        "amount",
        "currency",
      ],
    },
    "extends": "DomainEntity",
    "name": "Payment",
    "properties": Object {
      "amount": DomainObjectProperty {
        "nullable": false,
        "required": true,
        "type": "NUMBER",
      },
      "currency": DomainObjectProperty {
        "nullable": false,
        "required": true,
        "type": "STRING",
      },
      "externalId": DomainObjectProperty {
        "nullable": false,
        "required": true,
        "type": "STRING",
      },
      "status": DomainObjectProperty {
        "nullable": false,
        "of": Array [
          "PENDING",
          "COMPLETED",
          "CANCELED",
        ],
        "required": true,
        "type": "ENUM",
      },
    },
  },
]
`;
